# arbitrary-style-transfer-Cpp-Qt

./: .clang-format  .gitignore  CMakeLists.txt
src/: main.cpp
src/style_transfer/: AdaIN.cpp  AdaIN.h
src/ui/: MainWindow.cpp  MainWindow.h
